--- a/eshell/history
+++ b/eshell/history
@@ -1,28 +1,128 @@
-cd Work/linux/github/
+grep ZoneManager_Move_UseZone_to_FreeZone . -rn
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+clear
+./p.sh
+./p.sh
+clear
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+clear
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+grep L1Info_set . -rn
+grep L1Info . -rn
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+clear
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
+./p.sh
 ls
-cd qzystudy/
+cd ..
 ls
-cd cpp-design/
+cd list/
 ls
-cd observer/
+./m
 ls
-cd codes/
+gcc -o m main.c
 ls
+cp hlist/main.c .
+./m
+gcc -o m main.c
+./m
+./m
+gcc -o m main.c
 ls
-rm d.py 
-touch a.cpp
+cp hlist/hlist.c ,
+cp hlist/hlist.c .
+ls
+rm ,
+ls
+gcc -o m main.c
+ls
+./m
+gcc -o m main.c
+./m
+cd ..
+cd Nand/
+ls
+./p.sh 
+ls
+cd ../...
+cd ..
+cd ..
+cd work/android4.3r3.1-ingenic/
+ls
+cd system/
+cd core/
+ls
+cd sdcard/
+lls
+ls
 cd ..
 ls
 cd ..
 cd ..
-cd linux/
-find -name "dotemacs"
 cd ..
 ls
-cd 
+cd android4.1-warrior/
 ls
-cd Tools/
-find -name "dotemacs"
-meld ./dsqiu-emacs-config/ ../.emacs.d/ &
+cd external/
 ls
-e a.cpp 
+cd ntfs-3g-ntfsprogs/
+ls
+ls
+cd ntfsprogs/
+ls
+cd ..
+ls
+cd libfuse-lite/
+ls
+cd ..
+ls
+cd libntfs-3g/
+ls
+cd ..
+ls
+ls
+cd libntfs-3g/
+ls
+e unix_io.c
+grep ntfs_device_operations . -rn
+cd ..
+grep ntfs_device_operations . -rn
